# rinha-de-backend2025

./: Cargo.toml  docker-compose.yml  dockerfile  nginx.conf
final/: docker-compose.yml  info.json
rust_app/: Cargo.toml
rust_app/src/: app_state.rs  database.rs  internal_socket.rs  lib.rs  main.rs  processing.rs  stealing_queue.rs
src/: database.rs  main.rs
