[package]
edition = "2024"
name = "rinha"
version = "0.1.0"

[dependencies]
anyhow = "1.0.98"
axum = {version = "0.8.4", features = ["macros"]}
chrono = "0.4.41"
reqwest = {version = "0.12.22", features = ["json"]}
rusqlite = {version = "0.37", features = ["bundled"]}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = {version = "1.0.140"}
tokio = {version = "1.46.1", features = ["full"]}
tracing = {version = "0.1.41", features = ["attributes"]}
tracing-subscriber = "0.3.19"
